# pyspire

./: .gitignore  pyproject.toml
cmake_animation/: 01_simple_compile.py  02_object_compile.py  02_object_compile_dirty_header.py  02_object_compile_dirty_main.py  04_lib_compile.py  06_tests_compile.py  README.md  Untitled.xcf  cmake_animation.blend  cmake_grinding.py  make_all_videos.sh  make_video.sh  source_decorations.xcf
src/pyspire/: __init__.py  animation_base.py  event_bus.py  primitives.py  py_spire.py  sprite.py  sprite_layer.py  tickable.py
src/pyspire/animation/: __init__.py  bump.py  bump_animation_player.py  ease.py  fade.py  geom.py  sweep.py
tests/: test_animation_base.py  test_event_bus.py  test_primitives.py  test_sprite.py  test_sprite_layer.py  test_sweep.py
