[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyspire"
version = "0.0.1"
description = "pyspire: python animation framework for animated frame-centric creation"
authors = [{ name = "you" }]
requires-python = ">=3.10"
dependencies = [
  "cairocffi>=1.7.1"
]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]


[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
